2008-01-10  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui/ProgressMonitors.cs: When dynamically creating output
	  or search pads, create them next to existing output/search pads.

2008-01-10  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/SearchResultPad.cs,
	  MonoDevelop.Ide.Gui.Search/ISearchProgressMonitor.cs,
	  MonoDevelop.Ide.Gui.Search/SearchProgressMonitor.cs,
	  MonoDevelop.Ide.Gui.Search/SearchReplaceInFilesManager.cs: Improve
	  handling of search status messages. Fixes bug #352531.

2008-01-10  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Dialogs/SharpDevelopAboutPanels.cs,
	  AssemblyInfo.cs.in: Show the complete MD version number in the about
	  box. Fixes bug #350625.
	* MonoDevelop.Ide.Gui.Dialogs/CommonAboutDialog.cs: Updated authors list.

2008-01-09  Marek Safar <marek.safar@gmail.com> 

	* MonoDevelop.Ide.Tasks/CommentTasksView.cs,
	  MonoDevelop.Ide.Gui.Pads/ErrorListPad.cs: Fixed System.Action ambiguity.
	
2008-01-08  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Templates/FileTemplate.cs,
	  MonoDevelop.Ide.Templates/FileDescriptionTemplate.cs: Added new method
	  for checking if a file template supports a given project.

2008-01-02  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Templates/SingleFileDescriptionTemplate.cs,
	  MonoDevelop.Ide.Templates/CodeTranslationFileDescriptionTemplate.cs:
	  Allow creating files where the name is a language keyword, using keyword
	  escaping. Fixes some VB.NET ASP.NET templates. Code in templates should
	  use ${EscapedIdentifier} instead of ${Name}, or they may create invalid
	  code.

2007-12-28  Paul Lange  <palango@gmx.de>

	* MonoDevelop.Ide.addin.xml: Fix 'Bug 350395 - Use of "New Project/
	  Solution" terminology is inconsistent'.

2007-12-28  Zach Lute <zach.lute@gmail.com>

	* MonoDevelop.Ide.Commands/RefactoryCommands.cs: Methods will no longer show