@@ -44,7 +44,6 @@ namespace MonoDevelop.Ide.Gui
 	{
 		ArrayList searchMonitors = new ArrayList ();
 		ArrayList outputMonitors = new ArrayList ();
-		int monitorId = 0;
 		
 		/******************************/
 		
@@ -125,11 +124,10 @@ namespace MonoDevelop.Ide.Gui
 
 			instanceCount++;
 			DefaultMonitorPad monitorPad = new DefaultMonitorPad (title, icon, instanceCount);
-			monitorId++;
 			
 			if (instanceCount > 0)
 				title += " (" + (instanceCount+1) + ")";
-			pad = IdeApp.Workbench.ShowPad (monitorPad, "OutputPad" + monitorId, title, "OutputPad1/Center Bottom", icon);
+			pad = IdeApp.Workbench.ShowPad (monitorPad, "OutputPad" + instanceCount, title, "OutputPad0/Center Bottom", icon);
 			outputMonitors.Add (pad);
 			
 			if (instanceCount > 0) {
@@ -174,7 +172,7 @@ namespace MonoDevelop.Ide.Gui
 				title += " (" + (instanceNum+1) + ")";
 			
 			SearchResultPad monitorPad = new SearchResultPad (instanceNum);
-			pad = IdeApp.Workbench.ShowPad (monitorPad, "SearchPad" + (monitorId++), title, "SearchPad0/Center Bottom", MonoDevelop.Core.Gui.Stock.FindIcon);
+			pad = IdeApp.Workbench.ShowPad (monitorPad, "SearchPad" + instanceNum, title, "SearchPad0/Center Bottom", MonoDevelop.Core.Gui.Stock.FindIcon);
 		    searchMonitors.Add (pad);
 
 			if (searchMonitors.Count > 1) {
